manifests/media/streamystats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
spec:
  selector:
    app: nextjs-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: job-server
spec:
  selector:
    app: job-server
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vectorchord
spec:
  selector:
    app: vectorchord
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
