manifests/media/streamystats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamystats-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  tls:
    - hosts:
        - streamystats.tanksrop.xyz
      secretName: tanksrop.xyz
  rules:
    - host: streamystats.tanksrop.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-app
                port:
                  number: 3000
